# tree-sitter-linkerscript

./: Cargo.toml  Makefile  binding.gyp  go.mod  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-linkerscript.h  tree-sitter-linkerscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_linkerscript/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterLinkerscriptTests/: TreeSitterLinkerscriptTests.swift
src/: grammar.json  parser.c
